fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -121,9 +121,6 @@ nav {
     nav {
         margin: 0px auto;
     }
-    .logo {
-        width: 88%;
-    }
 }
 
 .nav-list a:hover {
@@ -535,9 +532,10 @@ section {
     }
 }
 
+
 .noticia-img {
     width: 100%;
-    height: 45%;
+    min-height: 252px;
     object-fit: cover;
     border-radius: 8px 8px 0 0;
 }
@@ -554,12 +552,12 @@ section {
     border-width: 1px;
     border-color: rgba(0, 0, 0, 0.175);
     border-radius: 8px;
-    flex: 1;
     background-color: #fff;
     min-width: 300px;
+    flex: 1;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1000px) {
     .container-noticias a:nth-child(3) {
         flex: 0.55;
     }
@@ -571,7 +569,7 @@ section {
 }
 
 .article-noticias-info {
-    padding: 10px 20px 45px 20px;
+    padding: 10px 20px 0px 20px;
 }
 
 .article-noticias-fonte {
@@ -583,7 +581,7 @@ section {
 }
 
 .article-noticias-descricao {
-    padding-bottom: 40px;
+    padding-bottom: 25px;
 }
 
 @media (max-width: 675px) {
@@ -593,10 +591,6 @@ section {
 
     .container-noticias a:nth-child(3) {
         flex: 1;
-    }
-
-    .article-noticias {
-        padding-bottom: 35px;
     }
 
     .article-noticias-descricao {
